--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-APP_NAME=Laravel
+APP_NAME=users_managment
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=es
 APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_FAKER_LOCALE=es_MX
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -20,11 +20,11 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=pgsql
 # DB_HOST=127.0.0.1
 # DB_PORT=5432
-# DB_DATABASE=users_managment_app
-# DB_USERNAME=root
+# DB_DATABASE=users_managment
+# DB_USERNAME=postgres
 # DB_PASSWORD=
 
 SESSION_DRIVER=database
