--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
         "laravel-permission-to-vuejs": "^3.0.8"
     }
 }
