--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.3",
         "laravel-permission-to-vuejs": "^3.0.8"
     }
 }
