--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@fortawesome/fontawesome-free": "^6.7.2",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.3",
-        "laravel-permission-to-vuejs": "^3.0.8"
+        "laravel-permission-to-vuejs": "^3.0.8",
+        "sweetalert2": "^11.17.2"
     }
 }
